# recursive-hash-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  finder.rs  hasher.rs  main.rs
src/gtk4_gui/: mod.rs
