[package]
name = "recursive-hash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
digest = "0.10"
env_logger = "0.11.9"
log = "0.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

[dependencies.gtk]
package = "gtk4"
version = "0.11.0"
optional = true
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.9"
optional = true

[features]
default = ["asm"]
asm = ["md-5/asm", "sha1/asm", "sha2/asm"]
gui = ["dep:gtk", "dep:adw"]
