[package]
name = "recursive-hash"
version = "0.1.0"
edition = "2024"

[profile.dev]

[profile.dev.package]
md-5 = { opt-level = 2 }
sha1 = { opt-level = 2 }
sha2 = { opt-level = 2 }

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
digest = "0.10"
env_logger = "0.11.9"
log = "0.4"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# Windows does not support asm.
[target.'cfg(all(not(target_os = "windows"), any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
md-5 = { version = "0.10", features = ["asm"] }
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }

# md-5 asm doesn't support AArch64
[target.'cfg(all(not(target_os = "windows"), target_arch = "aarch64"))'.dependencies]
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }

[dependencies.gtk]
package = "gtk4"
version = "0.11.0"
optional = true
features = ["v4_14"]

[dependencies.adw]
package = "libadwaita"
version = "0.9"
optional = true
features = ["v1_4"]

[features]
default = []
gui = ["dep:gtk", "dep:adw"]
